--- a/package.json
+++ b/package.json
@@ -1,64 +1,52 @@
 {
-  "name": "twist",
-  "version": "0.1.0",
+  "name": "Twist",
+  "version": "0.0.1",
   "private": true,
-  "devDependencies": {
-    "@types/expo": "^27.0.3",
-    "@types/expo__vector-icons": "^6.2.2",
-    "@types/jest": "^22.2.3",
-    "@types/react": "^16.3.14",
-    "@types/react-native": "^0.55.14",
-    "@types/react-navigation": "^2.0.6",
-    "@types/react-test-renderer": "^16.0.1",
-    "jest-expo": "~27.0.0",
-    "react-native-scripts-ts": "1.15.0",
-    "react-native-typescript-transformer": "^1.2.3",
-    "react-test-renderer": "16.3.1",
-    "ts-jest": "^22.4.6",
-    "tslib": "^1.9.1",
-    "tslint": "^5.10.0",
-    "typescript": "^2.8.3"
-  },
-  "main": "./node_modules/react-native-scripts-ts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts-ts start",
-    "eject": "react-native-scripts-ts eject",
-    "android": "react-native-scripts-ts android",
-    "ios": "react-native-scripts-ts ios",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
+  "dependencies": {
+    "react": "16.5.0",
+    "react-native": "0.57.2",
+    "react-native-elements": "^1.0.0-beta6",
+    "react-native-typography": "^1.4.0",
+    "react-native-vector-icons": "^6.0.2",
+    "react-native-video": "^3.2.1",
+    "react-navigation": "^2.17.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.5",
+    "@types/react": "^16.4.16",
+    "@types/react-native": "^0.57.4",
+    "@types/react-native-vector-icons": "^4.6.4",
+    "@types/react-native-video": "^2.0.7",
+    "@types/react-navigation": "^2.0.24",
+    "@types/react-test-renderer": "^16.0.3",
+    "babel-jest": "23.6.0",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.48.1",
+    "react-native-typescript-transformer": "^1.2.10",
+    "react-test-renderer": "16.5.0",
+    "ts-jest": "^23.10.4",
+    "typescript": "^3.1.2"
+  },
   "jest": {
-    "globals": {
-      "ts-jest": {
-        "useBabelrc": true
-      }
-    },
+    "preset": "react-native",
     "moduleFileExtensions": [
       "ts",
       "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "preset": "jest-expo",
-    "testMatch": [
-      "**/__tests__/**/*.[tj]s?(x)",
-      "**/?(*.)(spec|test).[tj]s?(x)"
+      "js"
     ],
     "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    }
-  },
-  "dependencies": {
-    "expo": "^27.0.1",
-    "react": "16.3.1",
-    "react-native": "~0.55.2",
-    "react-native-animatable": "^1.3.0",
-    "react-native-elements": "^0.19.1",
-    "react-native-gifted-chat": "^0.4.3",
-    "react-native-parallax-scroll-view": "^0.21.3",
-    "react-native-typography": "^1.3.0",
-    "react-navigation": "^2.4.1"
+      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testPathIgnorePatterns": [
+      "\\.snap$",
+      "<rootDir>/node_modules/"
+    ],
+    "cacheDirectory": ".jest/cache"
   }
 }
