--- a/package.json
+++ b/package.json
@@ -1,52 +1,36 @@
 {
-  "name": "Twist",
-  "version": "0.0.1",
-  "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "react": "16.5.0",
-    "react-native": "0.57.2",
-    "react-native-elements": "^1.0.0-beta6",
-    "react-native-typography": "^1.4.0",
-    "react-native-vector-icons": "^6.0.2",
-    "react-native-video": "^3.2.1",
-    "react-navigation": "^2.17.0"
+    "expo": "^34.0.1",
+    "expo-av": "^6.0.0",
+    "react": "16.8.3",
+    "react-dom": "^16.8.6",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-paper": "^2.16.0",
+    "react-native-reanimated": "~1.1.0",
+    "react-native-typography": "^1.4.1",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "^0.11.4",
+    "react-navigation": "^3.11.1",
+    "react-navigation-material-bottom-tabs": "^1.0.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.5",
-    "@types/react": "^16.4.16",
-    "@types/react-native": "^0.57.4",
-    "@types/react-native-vector-icons": "^4.6.4",
-    "@types/react-native-video": "^2.0.7",
-    "@types/react-navigation": "^2.0.24",
-    "@types/react-test-renderer": "^16.0.3",
-    "babel-jest": "23.6.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.48.1",
-    "react-native-typescript-transformer": "^1.2.10",
-    "react-test-renderer": "16.5.0",
-    "ts-jest": "^23.10.4",
-    "typescript": "^3.1.2"
+    "@types/react": "^16.8.23",
+    "@types/react-native": "^0.57.65",
+    "@types/react-native-elements": "^0.18.0",
+    "babel-preset-expo": "^6.0.0",
+    "typescript": "^3.4.5"
   },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "testPathIgnorePatterns": [
-      "\\.snap$",
-      "<rootDir>/node_modules/"
-    ],
-    "cacheDirectory": ".jest/cache"
-  }
+  "private": true
 }
